[gd_scene load_steps=4 format=3 uid="uid://blekt47ruwbbv"]

[ext_resource type="Script" uid="uid://cbfdpuysnm06a" path="res://Inventory/Scripts/inventory_slot.gd" id="1_gpqwp"]
[ext_resource type="Texture2D" uid="uid://ms6kkory58ap" path="res://Items/Assets/items.png" id="2_aln3l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ym05k"]
atlas = ExtResource("2_aln3l")
region = Rect2(0, 0, 32, 32)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 44.0
offset_bottom = 31.0
text = "
"
script = ExtResource("1_gpqwp")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = SubResource("AtlasTexture_ym05k")
expand_mode = 1

[node name="Quantity" type="Label" parent="."]
layout_mode = 0
offset_right = 63.0
offset_bottom = 63.0
text = "99"
horizontal_alignment = 2
vertical_alignment = 2

[node name="InteractionsPosition" type="Control" parent="."]
anchors_preset = 0
offset_left = 64.0
offset_right = 128.0
offset_bottom = 64.0

[connection signal="pressed" from="." to="." method="_on_pressed"]
